# citebot

./: .env.example  .gitignore  CITEBOT_IMPLEMENTATION_PLAN.md  Dockerfile  Makefile  README.md  citebot_postman_collection.json  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  compression.py  generation.py  prompts.py  schemas.py  service.py  session_store.py
app/api/routes/: __init__.py  admin_evaluation.py  admin_ingestion.py  health.py  research.py
app/core/: config.py  dependencies.py  health.py  lifecycle.py  security.py
app/db/: __init__.py  base.py  models.py  session.py
app/evaluation/: __init__.py  cli.py  evaluator.py  metrics.py  retrieval_harness.py  schemas.py  service.py
app/ingestion/: __init__.py  chunker.py  cli.py  embedder.py  loaders.py  normalizer.py  object_store.py  repository.py  schemas.py  service.py  sparse_index.py  vector_writers.py
app/observability/: __init__.py  metrics.py  middleware.py
app/retrieval/: __init__.py  repository.py  reranker.py  service.py
app/tools/: __init__.py  citation_verifier.py  python_sandbox.py  web_search.py
data/: retrieval_benchmark_queries.json
data/evaluation_datasets/: interpretability_scenario.json
data/evaluations/: tiny_smoke.json
data/full_text_corpus/: 2605.06652v1.json  2605.06653v1.json  2605.06661v1.json  2605.06665v1.json  2605.06666v1.json
data/sample_corpus/: arxiv_papers.jsonl  overview.md  roadmap.json
docs/architecture/: quality-thresholds.md  requirements.md  security-model.md  system-design.md
nginx/: nginx.conf
scripts/: arxiv_pdf_parser.py  download_corpus.py  run_interpretability_scenario.py  seed_interpretability_corpus.sh
tests/: conftest.py  test_api_contracts.py  test_embedder.py  test_evaluation_api.py  test_evaluation_service.py  test_health.py  test_ingestion_api.py  test_research_api.py  test_retrieval_harness.py
