[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citebot"
version = "0.1.0"
description = "Production foundation for the CiteBot agentic RAG assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "langgraph>=0.5.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0"
]

[project.scripts]
citebot-ingest = "app.ingestion.cli:main"
citebot-retrieval-harness = "app.evaluation.retrieval_harness:main"
citebot-eval = "app.evaluation.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "ruff>=0.7.0,<1.0.0"
]
evaluation = [
  "datasets>=3.1.0,<4.0.0",
  "ragas>=0.2.10,<1.0.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "ragas_ci: stable evaluation subset for the CiteBot quality gate"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
